--- a/FileList/Base.lproj/Main.storyboard
+++ b/FileList/Base.lproj/Main.storyboard
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6254" systemVersion="14C109" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" initialViewController="vXZ-lx-hvc">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6254" systemVersion="14C109" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" initialViewController="Uk6-Ez-12i">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6247"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
+        <!--Movies-->
         <scene sceneID="ufC-wZ-h7g">
             <objects>
                 <viewController id="vXZ-lx-hvc" customClass="ViewController" sceneMemberID="viewController">
@@ -13,7 +13,7 @@
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
                             <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" id="lKi-wS-7WJ">
-                                <rect key="frame" x="0.0" y="20" width="320" height="29"/>
+                                <rect key="frame" x="0.0" y="75" width="320" height="29"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <segments>
                                     <segment title="Popular"/>
@@ -25,17 +25,9 @@
                                 </connections>
                             </segmentedControl>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" id="Goh-S6-Jp4">
-                                <rect key="frame" x="0.0" y="56" width="320" height="554"/>
+                                <rect key="frame" x="0.0" y="111" width="320" height="512"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                <searchBar key="tableHeaderView" contentMode="redraw" id="M7t-zV-C04">
-                                    <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
-                                    <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
-                                    <textInputTraits key="textInputTraits"/>
-                                    <connections>
-                                        <outlet property="delegate" destination="vXZ-lx-hvc" id="2Tx-iQ-XWN"/>
-                                    </connections>
-                                </searchBar>
                                 <prototypes>
                                     <tableViewCell contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="MovieResultCell" textLabel="9un-Qh-CSu" detailTextLabel="76L-WJ-KQi" style="IBUITableViewCellStyleSubtitle" id="Qyl-CO-boB">
                                         <autoresizingMask key="autoresizingMask"/>
@@ -66,25 +58,77 @@
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                     </view>
+                    <navigationItem key="navigationItem" title="Movies" id="Srh-m8-Yg6"/>
                     <connections>
-                        <outlet property="MoviesSearchBar" destination="M7t-zV-C04" id="SVT-Q5-tce"/>
                         <outlet property="MoviesSegmentControl" destination="lKi-wS-7WJ" id="fpv-lN-uUh"/>
-                        <outlet property="appTableView" destination="Goh-S6-Jp4" id="Y6c-ze-k4o"/>
+                        <outlet property="appTableView" destination="Goh-S6-Jp4" id="nLr-nL-r4H"/>
                         <outlet property="searchDisplayController" destination="bpK-yJ-roy" id="Alb-yk-sli"/>
+                        <segue destination="i1P-MP-Vdu" kind="push" identifier="MovieDetail" id="fnf-64-Vup"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="x5A-6p-PRh" sceneMemberID="firstResponder"/>
-                <searchDisplayController id="bpK-yJ-roy">
-                    <connections>
-                        <outlet property="delegate" destination="vXZ-lx-hvc" id="tQq-PO-RF1"/>
-                        <outlet property="searchBar" destination="M7t-zV-C04" id="sGZ-ws-fTo"/>
-                        <outlet property="searchContentsController" destination="vXZ-lx-hvc" id="dkp-dk-1XZ"/>
-                        <outlet property="searchResultsDataSource" destination="vXZ-lx-hvc" id="GKJ-pu-vJM"/>
-                        <outlet property="searchResultsDelegate" destination="vXZ-lx-hvc" id="qg7-Xs-UAT"/>
-                    </connections>
-                </searchDisplayController>
+                <searchDisplayController id="bpK-yJ-roy"/>
             </objects>
-            <point key="canvasLocation" x="-39" y="416"/>
+            <point key="canvasLocation" x="567" y="355"/>
+        </scene>
+        <!--MovieDetail-->
+        <scene sceneID="702-lJ-bc0">
+            <objects>
+                <viewController id="i1P-MP-Vdu" customClass="MovieDetailsViewController" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="Oo2-3N-Rl3">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" id="F0F-t9-t3g">
+                                <rect key="frame" x="77" y="112" width="192" height="157"/>
+                                <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                            </imageView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="iPw-wj-pb9">
+                                <rect key="frame" x="16" y="78" width="288" height="26"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="justified" id="jhl-vA-lFN">
+                                <rect key="frame" x="39" y="339" width="288" height="243"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <string key="text">Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Nam liber te conscient to factor tum poen legum odioque civiuda.</string>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                            </textView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                    <navigationItem key="navigationItem" title="MovieDetail" id="ZUH-kW-Mnb"/>
+                    <connections>
+                        <outlet property="MovieDetails" destination="jhl-vA-lFN" id="Qv4-4k-Qs9"/>
+                        <outlet property="MovieName" destination="iPw-wj-pb9" id="zCp-uR-3rb"/>
+                        <outlet property="MoviePoster" destination="F0F-t9-t3g" id="UPd-gG-jZa"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="u8g-LB-JEk" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1045" y="355"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="RUJ-s6-8dw">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="Uk6-Ez-12i" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="hs8-0Q-j16">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="vXZ-lx-hvc" kind="relationship" relationship="rootViewController" id="ujC-ba-pFT"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="gmS-YH-ahF" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="53" y="355"/>
         </scene>
     </scenes>
     <simulatedMetricsContainer key="defaultSimulatedMetrics">
